# dlt-duckdb-phish

./: .gitignore  .mcp.json  explore-phish-data.ipynb  phish_elt.py  phish_users_attendance_elt.py  pyproject.toml  readme.md  requirements.txt  user_setlist_jsonl_to_local_files.py  user_setlist_jsonl_to_s3.py
.dlt/: config.toml  secrets.toml.example
dbt-pipelines/: README.md  dbt_project.yml
dbt-pipelines/analyses/: songs_unique_test.sql
dbt-pipelines/models/_raw_sources/: PHISH.yml
dbt-pipelines/models/reporting/: phish_obt  phish_setlists.sql  phish_song_stats.sql  phish_song_stats.yml
dbt-pipelines/models/staging/: eras_placeholder  staging.yml  stg_phishapi__artists.sql  stg_phishapi__eras.sql  stg_phishapi__setlists.sql  stg_phishapi__songs.sql
dbt-pipelines/orchestrations/: phish_build_all.yml
dbt-pipelines/seeds/: phish_eras.csv  phish_eras.yml
dlt-pipelines/: .gitignore  README.md  __deployment__.py  dbt_profile.py  phish_core_pipeline.py  phish_dbt_job.py  phish_pipeline.py  phish_user_pipeline.py  pipeline_common.py  requirements.txt
dlt-pipelines/.dlt/: .toolkits  config.toml  dev.config.toml  prod.config.toml
dlt-pipelines/dbt-pipelines/: .gitignore  README.md  dbt_project.yml
dlt-pipelines/dbt-pipelines/alerts/: phish_build_alert.yml
dlt-pipelines/docs/: user-attendance-incremental-options.md
dlt-pipelines/phish_el/: README.md  __init__.py
src/: phish_pipeline.py  slow_way.py
src/.dlt/: config.toml
src/phish_el/: __init__.py  phish_elt.py  phish_elt_fast.py  phish_users_attendance_elt.py  ship_to_md.py
(+22 files in other folders)
