[project]
name = "dlt-duckdb-phish"
version = "0.1.0"
description = "This project gets data from the Phish.net API, loads it to DuckDB, and publishes to MotherDuck."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb,motherduck,parquet,hub]==1.29.0",
    "duckdb>=1.5.4",
    "fastmcp>=3.4.4",
    "pyyaml>=6.0",
]

[dependency-groups]
# dbt Fusion CLI for phish_dbt_job.py. Keep the pin in sync with
# dlt-pipelines/requirements.txt — the dltHub runtime installs from THAT file.
dbt = [
    "dbt==2.0.0rc194",
]
dev = [
    "ruff>=0.8.0",
]

[tool.uv]
# install dbt on plain `uv sync` so `uv run python dlt-pipelines/phish_dbt_job.py`
# finds the dbt binary locally
default-groups = ["dev", "dbt"]
